<resources>
    <string name="app_name">Sandbox</string>
    <string name="launch_other_activity">Launch other Activity</string>
    <string name="activity_other_title">Other Activity</string>
    <string name="activity_other_content">Press FAB to return to previous screen with result OK + data containing \"foo\" -> 999 </string>
    <string name="activity_other_incoming_title">Incoming data</string>
    <string name="check_permissions">Check permissions</string>
    <string name="request_permissions">Request permissions</string>
    <string name="random_button">Random button in a RIB</string>
    <string name="show_simple_dialog">Simple dialog</string>
    <string name="show_themed_dialog">Themed dialog</string>
    <string name="show_lazy_dialog">Lazy dialog</string>
    <string name="show_rib_dialog">RIB dialog</string>
    <string name="show_blocker">Show blocker in parent</string>
    <string name="up_navigation">Up navigation</string>
    <string name="close">Close</string>
    <string name="a_title_you_wish">A title if you wish</string>
    <string name="lazy_dialog_title">Lazy dialog title</string>
</resources>
