<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rib_lorem_ipsum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp">

    <TextView
        android:id="@+id/lorem_ipsum_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Lorem ipsum RIB\n(default layout)"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/lorem_ipsum_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/lorem_ipsum_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lorem_ipsum_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
